//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  name String [not null]
  password String [not null]
  verified Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Sessions Session [not null]
  Quizzes Quiz [not null]
}

Table Session {
  id Int [pk, increment]
  userId Int [not null]
  user User [not null]
  refreshToken String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Quiz {
  id Int [pk, increment]
  userId Int [not null]
  user User [not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Questions Question [not null]
  ResponseUserInfos ResponseUserInfo [not null]
}

Table Question {
  id Int [pk, increment]
  quizId Int [not null]
  quiz Quiz [not null]
  title String [not null]
  alternatives String[] [not null]
  correctIndex Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Responses Response [not null]
}

Table Response {
  id Int [pk, increment]
  questionId Int [not null]
  question Question [not null]
  responseUserInfoId Int [not null]
  responseUserInfo ResponseUserInfo [not null]
  alternative String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table ResponseUserInfo {
  id Int [pk, increment]
  quizId Int [not null]
  quiz Quiz [not null]
  gender String [not null]
  age Int [not null]
  geolocation String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Responses Response [not null]
}

Ref: Session.userId > User.id [delete: Cascade]

Ref: Quiz.userId > User.id [delete: Cascade]

Ref: Question.quizId > Quiz.id [delete: Cascade]

Ref: Response.questionId > Question.id [delete: Cascade]

Ref: Response.responseUserInfoId > ResponseUserInfo.id [delete: Cascade]

Ref: ResponseUserInfo.quizId > Quiz.id [delete: Cascade]